--- a/MiskOpenglLab/MiskOpenglLab.vcxproj.filters
+++ b/MiskOpenglLab/MiskOpenglLab.vcxproj.filters
@@ -1,15 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Backends">
+      <UniqueIdentifier>{E068357E-CC35-9089-F54E-7E31E17AC517}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Backends\ImguiBackend">
+      <UniqueIdentifier>{52AC66F2-BE18-22ED-870C-BA4AF3374455}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Core">
       <UniqueIdentifier>{2EB4837C-1AEB-840D-C3D7-6A10AFED000F}</UniqueIdentifier>
     </Filter>
     <Filter Include="Event">
       <UniqueIdentifier>{E70B220D-5320-4ABE-1CA2-ED1D887546EF}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game">
+      <UniqueIdentifier>{7FA9857C-6BE0-860D-14CD-6C1000E3020F}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Imgui">
+      <UniqueIdentifier>{E087650D-4C9C-8DBE-151E-311E81F189EF}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Material">
+      <UniqueIdentifier>{74B94BCC-6086-A6D7-899F-947F75CBDB65}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Renderer">
+      <UniqueIdentifier>{7CCE658F-689B-C09A-91B4-AE427DE0F528}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Renderer\Core">
+      <UniqueIdentifier>{5460EFA1-C020-6BD8-895B-B455F5DAAFB4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Renderer\Debug">
+      <UniqueIdentifier>{F2C5E7DF-DE93-DBE5-C727-4C0CB394B74A}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Renderer\Opengl">
+      <UniqueIdentifier>{70D851F7-DC63-BFBB-E574-42B0517F1BBC}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shaders">
+      <UniqueIdentifier>{EFAC8DF2-5B8C-0C8E-64A4-9764D00273EF}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utility">
+      <UniqueIdentifier>{594615A9-C525-9444-CE3D-1F1B3A9CFAA5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\Backends\ImguiBackend\imgui_impl_glfw.h">
+      <Filter>Backends\ImguiBackend</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Backends\ImguiBackend\imgui_impl_opengl3.h">
+      <Filter>Backends\ImguiBackend</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Backends\ImguiBackend\imgui_impl_opengl3_loader.h">
+      <Filter>Backends\ImguiBackend</Filter>
+    </ClInclude>
     <ClInclude Include="src\Core\Core.h">
       <Filter>Core</Filter>
     </ClInclude>
@@ -49,10 +91,41 @@
     <ClInclude Include="src\Event\MouseEvent.h">
       <Filter>Event</Filter>
     </ClInclude>
+    <ClInclude Include="src\Game\Game.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Imgui\ImguiLayer.h">
+      <Filter>Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Material\Texture.h">
+      <Filter>Material</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\Core\Mesh.h">
+      <Filter>Renderer\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\Debug\Grid.h">
+      <Filter>Renderer\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\Opengl\Buffers.h">
+      <Filter>Renderer\Opengl</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Shaders\Shader.h">
+      <Filter>Shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utility\Cemera.h">
+      <Filter>Utility</Filter>
+    </ClInclude>
     <ClInclude Include="src\mkpch.h" />
+    <ClInclude Include="src\Renderer\Opengl\SkyBox.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\Backends\ImguiBackend\imgui_impl_glfw.cpp">
+      <Filter>Backends\ImguiBackend</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Backends\ImguiBackend\imgui_impl_opengl3.cpp">
+      <Filter>Backends\ImguiBackend</Filter>
+    </ClCompile>
     <ClCompile Include="src\Core\Layer.cpp">
       <Filter>Core</Filter>
     </ClCompile>
@@ -68,7 +141,35 @@
     <ClCompile Include="src\Core\WindowWindows.cpp">
       <Filter>Core</Filter>
     </ClCompile>
+    <ClCompile Include="src\Game\Game.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Imgui\ImguiLayer.cpp">
+      <Filter>Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Material\Texture.cpp">
+      <Filter>Material</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Renderer\Core\Mesh.cpp">
+      <Filter>Renderer\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Renderer\Debug\Grid.cpp">
+      <Filter>Renderer\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Renderer\Opengl\IndexBuffer.cpp">
+      <Filter>Renderer\Opengl</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Renderer\Opengl\VertexBuffer.cpp">
+      <Filter>Renderer\Opengl</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Shaders\Shader.cpp">
+      <Filter>Shaders</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Utility\Cemera.cpp">
+      <Filter>Utility</Filter>
+    </ClCompile>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mkpch.cpp" />
+    <ClCompile Include="src\Renderer\Opengl\SkyBox.cpp" />
   </ItemGroup>
 </Project>
